Archive2/89/ccda7dc960346d/output
main.cpp:5:21: error: integral constant expression must have integral or unscoped enumeration type, not 'C'
enum D { y = 0, x = C::x }; // even integral constant expression must have integral
                    ^~~~
1 error generated.
